# tts-data-pipeline

./: .gitignore  pyproject.toml
notebooks/: narrator.ipynb
tmp/: get_btn_by_playwright.py
tts_data_pipeline/: constants.py
tts_data_pipeline/crawler/: README.md  __main__.py  download.py  metadata.py  utils.py
tts_data_pipeline/pre_processing/: metadata.py
